--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="top-container">
     <img class="cloud1" src="images/cloud.png" alt="cloud image">
     <h1>I'm Arron Mixell.</h1>
-    <h2 class="aprogrammer">a <span class="pro">pro</span>grammer.</h2>
+    <h2 class="aprogrammer">a <span class="pro">web</span> developer.</h2>
     <img class="cloud2" src="images/cloud.png" alt="cloud image">
     <img class="mountain" src="images/mountain.png" alt="cloud image">
   </div>
@@ -39,8 +39,8 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class= "coolcat" src="images/cool cat.gif" alt="coolcatgif">
-        <h3>Programming and Software Developing</h3>
-        <p>I started to learn coding this year because I wanted a fulfilling career change that wasn't the same thing's I'd been doing for the past decade.</p>
+        <h3>Web Development</h3>
+        <p>I started to learn coding this year because I wanted a fulfilling career change outside of the blue collar field. I have experience in HTML, CSS, and Javascript.</p>
       </div>
 
       <div class="skill-row">
